[package]
name = "learning-rust"
version = "0.1.0"
authors = ["Claire Nord <cnord@mit.edu>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.33.0"
# rand = { git = "https://github.com/rust-lang-nursery/rand" }
# bar = { path = "../bar" }